contrast issues

--- a/src/Components/OfferedBookings/OfferedBookings.css
+++ b/src/Components/OfferedBookings/OfferedBookings.css
@@ -1,5 +1,5 @@
 .bookingsList {
-  background-color: #4f79bd;
+  background-color: #35568c;
   border-radius: 5%;
   width: 80%;
   margin-left: auto;
